# BlackBox

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .lvimrc  .pre-commit-config.yaml  .travis.yml  .vimrc  BlackBox.c2d  CMakeCache.txt.tmp  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  DevMode.lua  FCData  LICENSE  LinkFCData.bat  README.md  SelectFCPath.ps1  TextEditorDemo.hpp  bb.patch  blackbox.cap  bloomtime.txt  build.sh  files.sh  flex-bison-version.txt  game.cfg  game.project  glsl.cfg  hlsl.cfg  imgui.ini  launch  lua_dkm_debug.json  make.bat  make.sh  rename.txt  run.sh  steam_appid.txt  (+4 more)
Code/Configurator/: CMakeLists.txt  MainWindow.hpp
Code/Engine/3DEngine/: 3DEngine.cpp  3DEngine.hpp  CMakeLists.txt  Main.cpp  MaterialManager.cpp  ObjectManager.cpp  ObjectManager.hpp  SceneManager.cpp  SceneManager.hpp  StatObject.hpp  pch.hpp
Code/Engine/Animation/: CMakeLists.txt  CryCharInstance.cpp  CryCharInstance.h  CryCharManager.cpp  CryCharManager.h  Main.cpp  pch.hpp
Code/Engine/Common/: CMakeLists.txt
Code/Engine/EntitySystem/: CMakeLists.txt  Entity.cpp  Entity.hpp  EntityCharacter.cpp  EntityCharacter.hpp  EntitySystem.cpp  EntitySystem.hpp  PhysicalEntity.cpp  PhysicalEntity.hpp  Physics.cpp  Physics.hpp  pch.hpp
Code/Engine/GamePlatform/: CMakeLists.txt  GamePlatformSystem.cpp  GamePlatformSystem.hpp  pch.hpp
Code/Engine/Input/: ActionMap.cpp  ActionMap.hpp  ActionMapManager.cpp  BaseInput.cpp  BaseInput.hpp  CMakeLists.txt  Input.cpp  InputActionMap.cpp  InputCVars.cpp  InputCVars.hpp  InputDevice.cpp  InputHandler.cpp  SDLInput.cpp  SDLKeyboard.cpp  SDLMouse.cpp  SDLPad.cpp  SDLPad.hpp  pch.hpp
Code/Engine/Math/: CMakeLists.txt
Code/Engine/Network/: CMakeLists.txt  Client.cpp  Client.hpp  NetServerSnooper.cpp  Network.cpp  Network.hpp  NewUbisoftClient.h  Server.cpp  Server.hpp  ServerSnooper.cpp  ServerSnooper.h  pch.hpp
Code/Engine/Physics/: CMakeLists.txt  PhysicalWorld.cpp  PhysicalWorld.hpp  Physics.cpp  pch.hpp
Code/Engine/Profiler/: CMakeLists.txt  Drawer2D.cpp  Profiler.cpp  Tgaloader.cpp  Tgaloader.h  Thread.cpp  Utils.cpp
Code/Engine/Renderer/: AuxRenderer.cpp  AuxRenderer.hpp  AuxRendererNull.cpp  AuxRendererNull.hpp  BaseRenderer.cpp  BaseRenderer.hpp  BufferManager.hpp  CMakeLists.txt  Camera.cpp  FrameBufferObject.cpp  FreeTypeFont.cpp  FreeTypeFont.hpp  Material.cpp  MaterialManager.hpp  RenderThread.cpp  RenderThread.h  RendererCommon.hpp  RendererDLL.cpp  Shader.cpp  StateCache.cpp  StateManager.cpp  StateManager.hpp  TechniqueManager.cpp  Texture.cpp  TextureCube.cpp  TypedConstantBuffer.hpp  VertexBuffer.cpp  pch.hpp
Code/Engine/ScriptSystem/: CMakeLists.txt  FunctionHandler.cpp  FunctionHandler.hpp  Iterator.hpp  LibScriptSystem.cpp  ScriptBinding.cpp  ScriptObject.cpp  ScriptObjectClient.cpp  ScriptObjectSystem.cpp  ScriptSystem.cpp  ScriptSystem.hpp  pch.hpp
Code/Engine/Sound/: CListenerArea.cpp  CListenerArea.hpp  CMakeLists.txt  Sound.cpp  Sound.hpp  SoundBase.hpp  SoundDLL.cpp  SoundSystem.cpp  SoundSystem.hpp  pch.hpp
Code/Engine/System/: CMakeLists.txt  CmdLine.cpp  CmdLine.hpp  CmdLineArg.cpp  Commands.cpp  Console.cpp  Console.hpp  ConsoleBatchFile.cpp  CrySizerImpl.cpp  CrySizerImpl.h  DllMain.cpp  (+39 more)
Code/Tests/: CMakeLists.txt  tests.cpp
game/: CMakeLists.txt
game/include/: CameraController.hpp  Game.hpp  GameObject.hpp  IXSystem.hpp  Player.h  PlayerCommands.hpp  TagPoint.hpp  XPlayer.h  XSystemBase.hpp
game/src/: Actions.cpp  CMakeLists.txt  Commands.cpp  Game.cpp  GameActionInput.cpp  GameClientServer.cpp  GameDevMode.cpp  GameGUI.cpp  GameObject.cpp  GameTagPoints.cpp  Main.cpp  Player.cpp  PlayerCommands.cpp  pch.hpp
lib/glad/: CMakeLists.txt
res/: CMakeLists.txt  Textures  basecolor.frag  dummy.c  fragment.glsl  vertex.glsl
res/images/: LemonTreeLeaves_a.dds
res/materials/: default.xml
res/scenes/: alpha.xml  default.xml  new_scene.xml  shadow.xml  test.lua  test.xml
res/scripts/: CMakeLists.txt  ClassRegistry.lua  DebugTagPointsMgr.lua  Gui.lua  LoadLevel.lua  StateMachine.lua  bloom_test.lua  callbacks.txt  common.lua  engine.cfg  engine.lua  game.lua  init.cfg  lua_funcs.txt  main.lua  methoddispatcher.lua  postinit.cfg  rotation.cmd  saveutils.lua  shadow.cfg  test.bbs  testshader.lua  utils.lua
res/shaders/: CMakeLists.txt  a.spv  arch.frag  auxgeom.frag  auxgeom.vert  auxgeom.vs  base.vs  basecolor.frag  bb.frag  bb.vs  blur.frag  box_filter.frag  common.h  cubemap.vs  demo.frag  downsampling.comp  downsampling.frag  fragment.glsl  framebuffer.vs  geometry_pass.vs  grayscale.frag  gui.frag  gui.vs  hdrshader.frag  kernel.blur.frag  kernel.outline.frag  landscape.vs  light_pass.frag  lighting.h  negative.frag  points.frag  points.vert  quad.fs  quad.vs  radar.frag  reflect.frag  reflect.vs  refract.frag  screenshader.frag  screenshader.vs  (+16 more)
res/web/: test.html
src/: CCamera.cpp  CConsole.cpp  CEngine.cpp  CGLFWWindow.cpp  CGame.cpp  CInputHandler.cpp  CLog.cpp  CMakeCache.txt  CMakeLists.txt  CPlayer.cpp  CSDLWindow.cpp  CSFMLWindow.cpp  CShader.cpp  CSystem.cpp  CWindow.cpp  FrameBufferObject.cpp  GameGUI.cpp  GameObject.cpp  Geometry.cpp  GladLoader.cpp  GlewLoader.cpp  HackCamera.cpp  IndexBuffer.cpp  Main.cpp  Material.cpp  MaterialManager.cpp  MatrixTransform.cpp  ObjLoader.cpp  Object.cpp  ObjectManager.cpp  Plane.cpp  PlayerCommands.cpp  Primitives.cpp  Scene.cpp  SceneManager.cpp  ShaderManager.cpp  Texture.cpp  TextureManager.cpp  Triangle.cpp  Utils.cpp  (+3 more)
src/Configurator/: CMakeLists.txt  MainWindow.cpp
src/Editor/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.hpp
src/Engine/: CConsole.cpp  CEngine.cpp  CLog.cpp  CMakeLists.txt  Console.cpp  Engine.cpp  GUI.cpp  Geometry.cpp  Log.cpp  Scene.cpp  ScriptObjectClient.cpp  ScriptObjectConsole.cpp  ScriptObjectGame.cpp  ScriptObjectRenderer.cpp  ScriptObjectScript.cpp  ScriptObjectServer.cpp  ScriptObjectSystem.cpp  System.cpp  Triangle.cpp  VBOIndexer.cpp  World.cpp  dummy.cpp
src/Tools/: CMakeLists.txt
tests/: CMakeLists.txt  Main.cpp
(+2824 files in other folders)
